--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,10 @@
     "ember": "~2.5.0",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "ember-qunit-notifications": "0.1.0",
+    "interact": "1.2.5",
+    "jquery-simulate": "1.0.1",
+    "lodash": "3.10.0",
+    "fontawesome": "~4.5.0"
   }
 }
