--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "active-model-adapter": "2.1.1",
     "broccoli-asset-rev": "^2.4.2",
+    "broccoli-sass": "0.7.0",
     "ember-ajax": "0.7.1",
+    "ember-calendar": "0.3.7",
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -29,14 +32,21 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-moment-shim": "1.1.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-component-inbound-actions": "0.0.4",
     "ember-data": "^2.5.0",
+    "ember-data-model-fragments": "2.3.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-moment": "6.0.0",
     "ember-resolver": "^2.0.3",
+    "ember-rl-dropdown": "0.7.0",
+    "ember-simple-auth": "1.1.0-beta.4",
+    "liquid-fire": "0.27.0",
     "loader.js": "^4.0.1"
   }
 }
