[WIP] Query student assignments for calendar

--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "ember-cli-summernote": "^0.1.20",
     "ember-cli-uglify": "^1.2.0",
     "ember-component-inbound-actions": "0.0.4",
+    "ember-concurrency": "0.7.18",
     "ember-data": "^2.5.0",
     "ember-data-model-fragments": "2.3.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "6.0.0",
+    "ember-power-calendar": "0.1.8",
     "ember-resolver": "^2.0.3",
     "ember-rl-dropdown": "0.7.0",
     "ember-simple-auth": "1.1.0-beta.4",
