--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-sass": "0.7.0",
     "ember-ajax": "0.7.1",
+    "ember-array-contains-helper": "1.3.1",
+    "ember-basic-dropdown": "0.22.0",
     "ember-bootstrap": "1.0.0-alpha.3",
     "ember-calendar": "0.3.7",
     "ember-cli": "2.5.0",
