--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ember-power-calendar": "0.1.8",
     "ember-resolver": "^2.0.3",
     "ember-rl-dropdown": "0.7.0",
-    "ember-simple-auth": "1.1.0-beta.4",
+    "ember-simple-auth": "1.2.0",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.1",
     "showdown": "1.6.0"
