--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-resolver": "^2.0.3",
     "ember-rl-dropdown": "0.7.0",
     "ember-simple-auth": "1.2.0",
+    "ember-truth-helpers": "1.3.0",
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.1",
     "showdown": "1.6.0"
