--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "liquid-fire": "0.27.0",
     "loader.js": "^4.0.1",
     "showdown": "1.6.0"
+  },
+  "dependencies": {
+    "rails-csrf": "^2.0.1"
   }
 }
